# rush

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_UPDATED.md  CHANGELOG.md  CHECKLIST_BEFORE_DEFAULT_SHELL.md  CONTRIBUTING.md  Cargo.toml  FINAL_OPTIMIZATION_RESULTS.md  LICENSE-APACHE  LICENSE-MIT  Makefile  OPTIMIZATION_PLAN.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  QUICKSTART.md  QUOTING_BUGS.md  README.md  RUN_THIS_FIRST.md  STATUS.md  TESTING_GUIDE.md  TEST_CLAUDE_CODE.md  apply_executor_fix.py  apply_parser_fix.py  benchmark_results_claude_code.json  benchmark_startup.sh  rush-debug.sh  rush-login-debug.sh  rush-wrapper.sh  test_builtin_demo.sh  test_script.sh  test_unset.sh  typescript  wishlist.m
.beads/: ai-batteries-included.jsonl  create-beads.sh  create-stability-epic.sh  daemon-error  issues.jsonl
.beans/: 1.yaml  10.yaml  100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  11.yaml  110.yaml  111.yaml  112.yaml  113.yaml  114.yaml  115.yaml  116.yaml  117.yaml  118.yaml  119.yaml  12.yaml  120.yaml  121.yaml  122.yaml  123.yaml  124.yaml  125.yaml  126.yaml  127.yaml  128.yaml  129.yaml  13.yaml  130.yaml  131.yaml  132.yaml  133.yaml  134.yaml  (+171 more)
.claude/: rush-perf.jsonl  settings.local.json
.pi/: AGENTS.md
.ralph-tui/: progress.md  session-meta.json  session.json
benches/: README.md  ai_agent_workloads.rs  builtins.rs  claude_code_benchmark.py  compare_bash.sh  daemon_bench.sh  daemon_client.py  daemon_latency.rs  interactive_benchmark.sh  profile_benchmark.sh  quick_benchmark.sh  session_benchmark.sh  shell_comparison.rs  startup.rs
benchmarks/: criterion-vs-zsh.sh  script-bench-simple.sh  script-bench.sh
docs/: AI_AGENT_GUIDE.md  AI_AGENT_JSON_REFERENCE.md  AI_NATIVE_OS_VISION.md  DISTRIBUTION.md  HN_LAUNCH_FEATURES.md  INSTALLATION.md  PERFORMANCE.md  POSIX_COMPLIANCE_AUDIT.md  POSIX_TEST_SUITE.md  PRINTF_QUICK_REFERENCE.md  README.md  READ_BUILTIN_IMPLEMENTATION.md  RELEASE_TESTING.md  TEST_BUILTIN_IMPLEMENTATION.md  TEST_BUILTIN_QUICK_REFERENCE.md  ULTRA_LOW_LATENCY_OPTIMIZATION.md  benchmarking-claude-code.md  benchmarking.md  command-history.md  command-substitution.md  context-detection.md  daemon-architecture.md  error-recovery.md  exit-codes.md  file-redirection.md  functions.md  glob-expansion.md  history-implementation-summary.md  integration-testing.md  job-control.md  login-shell-init.md  non-tty-mode.md  pgo-build.md  shell-options.md  signal-handling.md  subshells.md  tab-completion.md  variable-expansion.md  worker-health-monitoring.md  worker-state-reset.md
examples/: README.md  branch_cleaner.rush  changelog_generator.rush  code_review_prep.rush  commit_message_generator.rush  dead_code_finder.rush  dependency_check.rush  file_stats.rush  find_todos.rush  git_author_stats.rush  heredoc_debug.rs  performance_profiler.rush  security_audit.rush  test_compat.sh  test_coverage_analyzer.rush
historical/: benchmark_2026-01-26_23-51-57.json
homebrew/: README.md
pi-rush/: README.md  package.json  test-daemon.sh
reports/: benchmark_2026-01-26_23-48-49.html  benchmark_2026-01-26_23-48-49.md  benchmark_2026-01-26_23-50-04.html  benchmark_2026-01-26_23-50-04.md
research/: BEANS_CATEGORIZATION_REPORT.md  BEANS_EXTRACTION_SUMMARY.txt  BEAN_VERIFICATION_INDEX.md  README_BEANS_EXTRACTION.md  acceptance_criteria_patterns.md  ai-native-unix-tools.md  all_beans_verification_map.csv  bean_26_50_verification_completion.md  bean_verification_summary.txt  beans_ready_output.txt  beans_verification_detailed_report.md  beans_verification_results.txt  extreme_polling_experiments.md  final_bean_closure_summary.txt  history-system-research.md  human-ai-collaboration-infrastructure.md  io_and_process_optimization.md  pattern_visual_reference.txt  verification_patterns_by_type.md  verify_commands_quick_ref.csv
scripts/: README.md  benchmark.sh  check_regression.sh  generate_benchmark_report.sh  verify-benchmarks.sh
src/: arithmetic.rs  error.rs  lib.rs  main.rs  perf.rs  signal.rs  terminal.rs
target-onx11/: .rustc_info.json
tests/: ansi_c_quoting_tests.rs  c_flag_tests.rs  case_statement_tests.rs  command_substitution_tests.rs  command_tests.rs  compat_tests.rs  error_recovery_tests.rs  eval_builtin_tests.rs  exec_builtin_tests.rs  exit_code_tests.rs  function_calling_test.rs  getopts_tests.rs  glob_expansion_tests.rs  grep_integration_test.rs  heredoc_tests.rs  ifs_tests.rs  job_control_tests.rs  job_spec_tests.rs  kill_builtin_tests.rs  login_shell_tests.rs  loop_control_tests.rs  non_tty_tests.rs  pipe_ask_tests.rs  pipeline_tests.rs  positional_param_tests.rs  posix_2024_compliance.rs  posix_compliance_tests.rs  printf_test.sh  process_group_tests.rs  quoting_tests.rs  readonly_tests.rs  redirect_tests.rs  shell_options_tests.rs  shell_variables_tests.rs  shift_builtin_tests.rs  shift_integration_test.sh  sigchld_tests.rs  smoke_test.sh  (+12 more)
(+962 files in other folders)
