[package]
name = "rush"
version = "0.1.0"
edition = "2021"
authors = ["Rush Contributors"]
description = "A modern Unix shell written in Rust"
license = "MIT OR Apache-2.0"

[lib]
name = "rush"
path = "src/lib.rs"

[[bin]]
name = "rush"
path = "src/main.rs"

[dependencies]
# Parsing
nom = "7"
logos = "0.14"

# Line editing & completion
reedline = "0.36"
nu-ansi-term = "0.50"
crossterm = "0.27"

# Execution
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["process", "signal"] }
os_pipe = "1.1"

# File operations
ignore = "0.4"
walkdir = "2"
memmap2 = "0.9"

# Grep functionality (ripgrep internals)
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"
termcolor = "1"

# Git integration
git2 = "0.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "2"
dirs = "5"
num_cpus = "1"
fuzzy-matcher = "0.3"
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

# Benchmark targets
[[bench]]
name = "startup"
harness = false

[[bench]]
name = "builtins"
harness = false

[[bench]]
name = "shell_comparison"
harness = false

[features]
default = []
embedded = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
